--- a/app/src/main/res/layout/activity_myinfo.xml
+++ b/app/src/main/res/layout/activity_myinfo.xml
@@ -61,10 +61,8 @@
         android:textColor="@android:color/background_light"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/user_sex"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintRight_creator="1"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView3" />
 
     <Button
@@ -131,13 +129,10 @@
         android:text="@string/Sex"
         android:textColor="@android:color/background_light"
         android:textStyle="bold"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        app:layout_constraintRight_toRightOf="@+id/myinfo_height"
-        android:layout_marginTop="19dp"
-        tools:layout_constraintLeft_creator="1"
+        android:layout_marginLeft="17dp"
+        app:layout_constraintLeft_toLeftOf="@+id/imageView5"
         app:layout_constraintTop_toTopOf="@+id/imageView5"
-        app:layout_constraintLeft_toRightOf="@+id/myinfo_height" />
+        android:layout_marginTop="17dp" />
 
     <TextView
         android:id="@+id/myinfo_age"
@@ -147,46 +142,40 @@
         android:text="@string/Age"
         android:textColor="@android:color/background_light"
         android:textStyle="bold"
-        app:layout_constraintRight_toLeftOf="@+id/user_age"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toBottomOf="@+id/user_age"
         android:layout_marginEnd="20dp"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/imageView5"
-        app:layout_constraintTop_toTopOf="@+id/user_age"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/myinfo_sex"
         android:layout_marginLeft="17dp"
+        app:layout_constraintLeft_toLeftOf="@+id/imageView5"
         android:layout_marginRight="20dp" />
 
     <TextView
         android:id="@+id/myinfo_height"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:text="@string/Height"
         android:textColor="#ffffff"
         android:textStyle="bold"
-        tools:layout_constraintTop_creator="1"
         android:layout_marginStart="17dp"
-        android:layout_marginTop="14dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@+id/myinfo_age"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/imageView5"
-        android:layout_marginLeft="8dp" />
+        android:layout_marginLeft="17dp"
+        app:layout_constraintLeft_toLeftOf="@+id/imageView5" />
 
     <TextView
         android:id="@+id/myinfo_weight"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:text="@string/Weight"
         android:textColor="#ffffff"
         android:textStyle="bold"
-        tools:layout_constraintTop_creator="1"
-        android:layout_marginTop="9dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@+id/myinfo_height"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/myinfo_height"
-        android:layout_marginLeft="0dp" />
+        android:layout_marginLeft="17dp"
+        app:layout_constraintLeft_toLeftOf="@+id/imageView5"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintVertical_bias="0.545" />
 
     <TextView
         android:id="@+id/myinfo_bmi"
@@ -195,13 +184,10 @@
         android:text="@string/BMI"
         android:textColor="#ffffff"
         android:textStyle="bold"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toTopOf="@+id/user_obesity"
-        app:layout_constraintRight_toRightOf="@+id/user_nickname"
-        tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="5dp"
-        app:layout_constraintLeft_toRightOf="@+id/user_nickname" />
+        app:layout_constraintTop_toTopOf="@+id/imageView5"
+        android:layout_marginTop="17dp"
+        android:layout_marginRight="110dp"
+        app:layout_constraintRight_toRightOf="@+id/imageView5" />
 
     <TextView
         android:id="@+id/user_obesity"
@@ -213,55 +199,45 @@
         android:text="@string/Obesity"
         android:textColor="#ffffff"
         android:textStyle="bold"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
         android:layout_marginStart="76dp"
-        app:layout_constraintBottom_toBottomOf="@+id/myinfo_onedaycal"
         android:layout_marginEnd="76dp"
-        app:layout_constraintRight_toRightOf="@+id/imageView5"
-        android:layout_marginTop="22dp"
-        tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="23dp"
-        app:layout_constraintTop_toTopOf="@+id/user_bmi"
-        app:layout_constraintLeft_toRightOf="@+id/user_height"
-        android:layout_marginLeft="76dp"
-        android:layout_marginRight="76dp" />
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/myinfo_bmi"
+        android:layout_marginRight="76dp"
+        app:layout_constraintRight_toRightOf="@+id/imageView5" />
 
     <TextView
         android:id="@+id/myinfo_onedaycal"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:text="@string/OneDayCalorie"
         android:textColor="#ffffff"
         android:textStyle="bold"
-        tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toTopOf="@+id/user_onedaycal"
-        tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="5dp"
-        app:layout_constraintLeft_toLeftOf="@+id/user_obesity" />
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/user_obesity"
+        android:layout_marginRight="53dp"
+        app:layout_constraintRight_toRightOf="@+id/imageView5" />
 
     <TextView
         android:id="@+id/user_onedaycal"
-        android:layout_width="0dp"
+        android:layout_width="88dp"
         android:layout_height="22dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginTop="10dp"
         android:background="@drawable/wrap_whiteborder"
         android:gravity="center"
         android:text="@string/UserCalorie"
         android:textColor="#ffffff"
         android:textStyle="bold"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toBottomOf="@+id/user_achievecountcurrent"
-        android:layout_marginEnd="1dp"
-        app:layout_constraintRight_toRightOf="@+id/user_bmi"
-        android:layout_marginTop="127dp"
-        tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="127dp"
-        app:layout_constraintLeft_toLeftOf="@+id/myinfo_onedaycal"
-        app:layout_constraintTop_toTopOf="@+id/user_nickname"
-        android:layout_marginRight="1dp" />
+        app:layout_constraintTop_toBottomOf="@+id/myinfo_onedaycal"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintVertical_bias="1.0"
+        app:layout_constraintLeft_toRightOf="@+id/myinfo_weight"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="@+id/imageView5"
+        app:layout_constraintHorizontal_bias="0.626" />
 
     <ImageView
         android:id="@+id/imageView6"
@@ -291,7 +267,6 @@
         android:layout_marginStart="43dp"
         app:layout_constraintBottom_toBottomOf="@+id/progressBar2"
         android:layout_marginEnd="42dp"
-        app:layout_constraintRight_toRightOf="@+id/user_height"
         tools:layout_constraintLeft_creator="1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="@+id/textView13"
@@ -370,86 +345,6 @@
         android:textStyle="bold"
         app:layout_constraintBaseline_toBaselineOf="@+id/user_achievecount"
         app:layout_constraintLeft_toRightOf="@+id/user_achievecount" />
-
-    <TextView
-        android:id="@+id/user_sex"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="1dp"
-        android:text="@string/UserSex"
-        android:textColor="#ffffff"
-        android:textStyle="bold"
-        tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toTopOf="@+id/user_age"
-        tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="5dp"
-        app:layout_constraintLeft_toLeftOf="@+id/user_age"
-        android:layout_marginLeft="1dp" />
-
-    <TextView
-        android:id="@+id/user_age"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="27dp"
-        android:text="@string/UserAge"
-        android:textColor="#ffffff"
-        android:textStyle="bold"
-        tools:layout_constraintTop_creator="1"
-        android:layout_marginTop="4dp"
-        app:layout_constraintTop_toBottomOf="@+id/myinfo_sex"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toRightOf="@+id/myinfo_sex"
-        android:layout_marginLeft="39dp" />
-
-    <TextView
-        android:id="@+id/user_height"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/UserHeight"
-        android:textColor="#ffffff"
-        android:textStyle="bold"
-        tools:layout_constraintTop_creator="1"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="11dp"
-        app:layout_constraintTop_toBottomOf="@+id/user_age"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/user_age"
-        android:layout_marginLeft="-1dp" />
-
-    <TextView
-        android:id="@+id/user_weight"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="2dp"
-        android:layout_marginStart="2dp"
-        android:layout_marginTop="7dp"
-        android:text="@string/UserWeight"
-        android:textColor="#ffffff"
-        android:textStyle="bold"
-        app:layout_constraintLeft_toLeftOf="@+id/user_height"
-        app:layout_constraintTop_toBottomOf="@+id/user_height"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintTop_creator="1" />
-
-    <TextView
-        android:id="@+id/user_bmi"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="23dp"
-        android:text="@string/UserBMI"
-        android:textColor="#ffffff"
-        android:textStyle="bold"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        android:layout_marginEnd="19dp"
-        app:layout_constraintRight_toRightOf="@+id/myinfo_onedaycal"
-        android:layout_marginTop="18dp"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintTop_toTopOf="@+id/imageView5"
-        app:layout_constraintLeft_toRightOf="@+id/myinfo_bmi"
-        android:layout_marginLeft="23dp"
-        android:layout_marginRight="19dp"
-        app:layout_constraintHorizontal_bias="0.0" />
 
     <TextView
         android:id="@+id/user_achieverpercent"
