--- a/app/src/main/res/layout/activity_food_dic.xml
+++ b/app/src/main/res/layout/activity_food_dic.xml
@@ -33,22 +33,22 @@
         app:layout_constraintTop_toBottomOf="@+id/spinner_fooddic" />
 
     <EditText
-        android:id="@+id/editText8"
+        android:id="@+id/SearchText"
         android:layout_width="250dp"
         android:layout_height="34dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginStart="0dp"
+        android:layout_marginTop="8dp"
         android:background="@drawable/wrap_whitebox"
         android:ems="10"
         android:hint="@string/SearchHint"
         android:inputType="text"
         android:paddingLeft="10dp"
         android:textColor="@android:color/darker_gray"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="@+id/button_fooddic_cancel"
-        app:layout_constraintTop_toTopOf="@+id/imageView29"
-        android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView29"
-        android:layout_marginBottom="8dp" />
+        app:layout_constraintLeft_toLeftOf="@+id/button_fooddic_cancel"
+        app:layout_constraintTop_toTopOf="@+id/imageView29" />
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar10"
