--- a/app/src/main/res/layout/activity_myinfo_change.xml
+++ b/app/src/main/res/layout/activity_myinfo_change.xml
@@ -69,7 +69,7 @@
         android:layout_marginBottom="74dp"
         android:layout_marginTop="77dp"
         android:contentDescription="@string/UserName"
-        app:layout_constraintBottom_toBottomOf="@+id/editText"
+        app:layout_constraintBottom_toBottomOf="@+id/change_nickname"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@+id/textView25"
@@ -80,7 +80,7 @@
         tools:layout_constraintTop_creator="1" />
 
     <TextView
-        android:id="@+id/textView26"
+        android:id="@+id/myinfochange_nickname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="48dp"
@@ -89,13 +89,13 @@
         android:textColor="#000000"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintBaseline_toBaselineOf="@+id/editText"
+        app:layout_constraintBaseline_toBaselineOf="@+id/change_nickname"
         app:layout_constraintLeft_toLeftOf="parent"
         tools:layout_constraintBaseline_creator="1"
         tools:layout_constraintLeft_creator="1" />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/change_nickname"
         android:layout_width="222dp"
         android:layout_height="43dp"
         android:layout_marginBottom="67dp"
@@ -106,13 +106,13 @@
         android:inputType="textPersonName"
         android:padding="10dp"
         android:text="@string/UserName"
-        app:layout_constraintBottom_toTopOf="@+id/editText2"
-        app:layout_constraintLeft_toRightOf="@+id/textView26"
+        app:layout_constraintBottom_toTopOf="@+id/change_age"
+        app:layout_constraintLeft_toRightOf="@+id/myinfochange_nickname"
         tools:layout_constraintBottom_creator="1"
         tools:layout_constraintLeft_creator="1" />
 
     <TextView
-        android:id="@+id/textView27"
+        android:id="@+id/myinfochange_sex"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/Sex"
@@ -120,7 +120,7 @@
         android:textSize="18sp"
         android:textStyle="bold"
         tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toTopOf="@+id/textView28"
+        app:layout_constraintBottom_toTopOf="@+id/myinfochange_age"
         android:layout_marginStart="48dp"
         tools:layout_constraintLeft_creator="1"
         android:layout_marginBottom="30dp"
@@ -128,7 +128,7 @@
         android:layout_marginLeft="48dp" />
 
     <TextView
-        android:id="@+id/textView28"
+        android:id="@+id/myinfochange_age"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/Age"
@@ -136,29 +136,29 @@
         android:textSize="18sp"
         android:textStyle="bold"
         tools:layout_constraintRight_creator="1"
-        app:layout_constraintRight_toRightOf="@+id/textView27"
-        app:layout_constraintBaseline_toBaselineOf="@+id/editText2"
+        app:layout_constraintRight_toRightOf="@+id/myinfochange_sex"
+        app:layout_constraintBaseline_toBaselineOf="@+id/change_age"
         tools:layout_constraintBaseline_creator="1"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/textView27" />
+        app:layout_constraintLeft_toLeftOf="@+id/myinfochange_sex" />
 
     <TextView
-        android:id="@+id/textView29"
+        android:id="@+id/myinfochange_height"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="48dp"
+        android:layout_marginStart="48dp"
         android:text="@string/Height"
         android:textColor="#000000"
         android:textSize="18sp"
         android:textStyle="bold"
-        android:layout_marginStart="48dp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/editText3"
-        tools:layout_constraintBaseline_creator="1"
-        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintBaseline_toBaselineOf="@+id/change_height"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="48dp" />
+        tools:layout_constraintBaseline_creator="1"
+        tools:layout_constraintLeft_creator="1" />
 
     <TextView
-        android:id="@+id/textView30"
+        android:id="@+id/myinfochange_weight"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -167,8 +167,8 @@
         android:textColor="#000000"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintBaseline_toBaselineOf="@+id/editText4"
-        app:layout_constraintRight_toLeftOf="@+id/editText4"
+        app:layout_constraintBaseline_toBaselineOf="@+id/change_weight"
+        app:layout_constraintRight_toLeftOf="@+id/change_weight"
         tools:layout_constraintBaseline_creator="1"
         tools:layout_constraintRight_creator="1" />
 
@@ -190,7 +190,7 @@
         tools:layout_constraintRight_creator="1" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/change_age"
         android:layout_width="0dp"
         android:layout_height="43dp"
         android:layout_marginBottom="13dp"
@@ -199,15 +199,15 @@
         android:inputType="textPersonName"
         android:padding="10dp"
         android:text="@string/UserAge"
-        app:layout_constraintBottom_toTopOf="@+id/editText3"
-        app:layout_constraintLeft_toLeftOf="@+id/editText"
-        app:layout_constraintRight_toRightOf="@+id/editText"
+        app:layout_constraintBottom_toTopOf="@+id/change_height"
+        app:layout_constraintLeft_toLeftOf="@+id/change_nickname"
+        app:layout_constraintRight_toRightOf="@+id/change_nickname"
         tools:layout_constraintBottom_creator="1"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintRight_creator="1" />
 
     <EditText
-        android:id="@+id/editText3"
+        android:id="@+id/change_height"
         android:layout_width="0dp"
         android:layout_height="43dp"
         android:background="@drawable/wrap_blackborder"
@@ -217,14 +217,14 @@
         android:text="@string/UserHeight"
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toTopOf="@+id/editText4"
-        app:layout_constraintRight_toRightOf="@+id/editText2"
+        app:layout_constraintBottom_toTopOf="@+id/change_weight"
+        app:layout_constraintRight_toRightOf="@+id/change_age"
         tools:layout_constraintLeft_creator="1"
         android:layout_marginBottom="14dp"
-        app:layout_constraintLeft_toLeftOf="@+id/editText2" />
+        app:layout_constraintLeft_toLeftOf="@+id/change_age" />
 
     <EditText
-        android:id="@+id/editText4"
+        android:id="@+id/change_weight"
         android:layout_width="0dp"
         android:layout_height="43dp"
         android:background="@drawable/wrap_blackborder"
@@ -235,10 +235,10 @@
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintBottom_creator="1"
         app:layout_constraintBottom_toTopOf="@+id/button_myinfochange_complete"
-        app:layout_constraintRight_toRightOf="@+id/editText3"
+        app:layout_constraintRight_toRightOf="@+id/change_height"
         tools:layout_constraintLeft_creator="1"
         android:layout_marginBottom="21dp"
-        app:layout_constraintLeft_toLeftOf="@+id/editText3" />
+        app:layout_constraintLeft_toLeftOf="@+id/change_height" />
 
     <Button
         android:id="@+id/button_myinfochange_imgchange"
@@ -265,29 +265,29 @@
         tools:layout_constraintTop_creator="1"
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toBottomOf="@+id/editText2"
-        app:layout_constraintRight_toRightOf="@+id/editText"
+        app:layout_constraintBottom_toBottomOf="@+id/change_age"
+        app:layout_constraintRight_toRightOf="@+id/change_nickname"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/editText"
-        app:layout_constraintTop_toTopOf="@+id/editText">
+        app:layout_constraintLeft_toLeftOf="@+id/change_nickname"
+        app:layout_constraintTop_toTopOf="@+id/change_nickname">
 
         <RadioButton
-            android:id="@+id/radioButton4"
+            android:id="@+id/radio_male"
             android:layout_width="110dp"
             android:layout_height="match_parent"
             android:background="@drawable/wrap_blackborder"
             android:checked="true"
             android:elevation="0dp"
             android:text="@string/Man"
-            app:buttonTint="#ff6161" />
+            android:buttonTint="#ff6161" />
 
         <RadioButton
-            android:id="@+id/radioButton3"
+            android:id="@+id/radio_female"
             android:layout_width="110dp"
             android:layout_height="match_parent"
             android:background="@drawable/wrap_blackborder"
             android:text="@string/Woman"
-            app:buttonTint="#ff6161" />
+            android:buttonTint="#ff6161" />
     </RadioGroup>
 
 </android.support.constraint.ConstraintLayout>
