--- a/app/src/main/res/layout/activity_food_dic.xml
+++ b/app/src/main/res/layout/activity_food_dic.xml
@@ -89,17 +89,17 @@
         android:id="@+id/button_fooddic_search"
         android:layout_width="30dp"
         android:layout_height="30dp"
+        android:layout_marginEnd="6dp"
+        android:layout_marginRight="6dp"
         android:layout_marginTop="9dp"
         android:background="@android:drawable/ic_menu_search"
         app:layout_constraintRight_toLeftOf="@+id/button_fooddic_makemy"
-        app:layout_constraintTop_toTopOf="@+id/imageView29"
-        android:layout_marginRight="6dp" />
+        app:layout_constraintTop_toTopOf="@+id/imageView29" />
 
     <Button
         android:id="@+id/button_fooddic_camera"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:layout_marginRight="0dp"
         android:layout_marginTop="9dp"
         android:background="@android:drawable/ic_menu_camera"
         app:layout_constraintRight_toRightOf="parent"
@@ -109,24 +109,22 @@
         android:id="@+id/button_fooddic_makemy"
         android:layout_width="30dp"
         android:layout_height="30dp"
+        android:layout_marginEnd="6dp"
+        android:layout_marginRight="6dp"
         android:layout_marginTop="9dp"
         android:background="@android:drawable/ic_menu_edit"
         app:layout_constraintRight_toLeftOf="@+id/button_fooddic_camera"
-        app:layout_constraintTop_toTopOf="@+id/imageView29"
-        android:layout_marginRight="6dp" />
+        app:layout_constraintTop_toTopOf="@+id/imageView29" />
 
-    <fragment
-        android:id="@+id/fragment"
-        android:name="android.support.v4.app.ListFragment"
-        android:layout_width="368dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView29"
+    <ListView
+        android:id="@+id/android:list"
+        android:layout_width="344dp"
+        android:layout_height="500dp"
         android:layout_marginLeft="8dp"
-        app:layout_constraintVertical_bias="0.501"
-        app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent" />
+        android:layout_marginTop="7dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView29" />
+
 </android.support.constraint.ConstraintLayout>
