--- a/app/src/main/res/layout/fragment_fatsecret_search.xml
+++ b/app/src/main/res/layout/fragment_fatsecret_search.xml
@@ -100,7 +100,7 @@
         android:layout_marginEnd="8dp" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/button_fooddictest_cancel"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -125,7 +125,7 @@
         android:padding="5dp"
         android:textAlignment="center"
         app:layout_constraintBottom_toTopOf="@+id/toolbar_search"
-        app:layout_constraintLeft_toRightOf="@+id/button5"
+        app:layout_constraintLeft_toRightOf="@+id/button_fooddictest_cancel"
         app:layout_constraintRight_toLeftOf="@+id/button6"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginStart="8dp"
@@ -153,17 +153,16 @@
         android:layout_marginRight="8dp"
         android:layout_marginTop="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.114"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/searchProgress"
-        app:layout_constraintVertical_bias="1.0">
+        app:layout_constraintVertical_bias="0.4">
 
         <ListView
             android:id="@+id/listView"
             android:layout_width="0dp"
             android:layout_height="462dp"
-            android:layout_alignParentStart="true"
             android:layout_marginEnd="8dp"
             android:layout_marginTop="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -172,7 +171,8 @@
             app:layout_constraintRight_toRightOf="parent"
             tools:layout_constraintBottom_creator="1"
             tools:layout_constraintLeft_creator="1"
-            tools:layout_constraintRight_creator="1" />
+            tools:layout_constraintRight_creator="1"
+            android:layout_alignParentStart="true" />
     </RelativeLayout>
 
 </android.support.constraint.ConstraintLayout>
